--- a/uasdm-web/src/main/ng2/src/app/shared/component/header/header.component.html
+++ b/uasdm-web/src/main/ng2/src/app/shared/component/header/header.component.html
@@ -59,9 +59,6 @@
               </a>
             </li>
             <li *ngIf="admin" role="menuitem">
-              <a class="dropdown-item" routerLink="/site/sensors" routerLinkActive="active">Sensors</a>
-            </li>
-            <li *ngIf="admin" role="menuitem">
               <a class="dropdown-item" routerLink="/site/platforms" routerLinkActive="active">Platforms</a>
             </li>
             <li *ngIf="admin" role="menuitem">
@@ -71,7 +68,13 @@
               <a class="dropdown-item" routerLink="/site/platform-types" routerLinkActive="active">Platform Types</a>
             </li>
             <li *ngIf="admin" role="menuitem">
+              <a class="dropdown-item" routerLink="/site/sensors" routerLinkActive="active">Sensors</a>
+            </li>
+            <li *ngIf="admin" role="menuitem">
               <a class="dropdown-item" routerLink="/site/sensor-types" routerLinkActive="active">Sensor Types</a>
+            </li>
+            <li *ngIf="admin" role="menuitem">
+              <a class="dropdown-item" routerLink="/site/uavs" routerLinkActive="active">UAVs</a>
             </li>
             <li *ngIf="admin" role="menuitem">
               <a class="dropdown-item" routerLink="/site/wave-lengths" routerLinkActive="active">Wave Lengths</a>
