--- a/uasdm-web/src/main/ng2/src/app/site/component/platform/platform.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/platform/platform.component.html
@@ -34,7 +34,7 @@
         <div class="form-group">
           <label>Type</label>
           <select [(ngModel)]="platform.platformType" [disabled]="mode === 'READ'" name="platformType" type="input"
-            class="form-control" placeholder="Type">
+            class="form-control" placeholder="Type" required>
             <option></option>
             <option *ngFor="let type of types" [value]="type.oid">{{type.label}}</option>
           </select>
@@ -42,7 +42,7 @@
         <div class="form-group">
           <label>Manufacturer</label>
           <select [(ngModel)]="platform.manufacturer" [disabled]="mode === 'READ'" name="manufacturer" type="input"
-            class="form-control" placeholder="Type">
+            class="form-control" placeholder="Type" required>
             <option></option>
             <option *ngFor="let manufacturer of manufacturers" [value]="manufacturer.oid">{{manufacturer.label}}
             </option>
