--- a/uasdm-web/src/main/ng2/src/app/site/component/modal/metadata-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/modal/metadata-modal.component.html
@@ -18,7 +18,6 @@
                     </div>
                 </div>
 
-
                 <div class="panel panel-default">
                     <div class="panel-heading">Point Of Contact</div>
                     <div class="panel-body">
@@ -38,47 +37,22 @@
                 <div class="panel panel-default">
                     <div class="panel-heading">Platform</div>
                     <div class="panel-body">
-                        <div class="form-group">
-                            <label for="platform.name">Name</label>
-                            <select [(ngModel)]="metaObject.platform.name" name="platform.name" type="input" (change)="handlePlatformSelect()" required>                               
-                                <option></option>
-                                <option *ngFor="let platform of platforms" [value]="platform.oid">{{platform.displayLabel}}</option>
-                            </select>
-                        </div>
-                        <div class="form-group" *ngIf="metaObject.platform.name === otherPlatformId">
-                            <label for="platform.class">Other name</label>
-                            <input type="text" name="platform.otherName" [(ngModel)]="metaObject.platform.otherName"
-                                maxlength="20" required />
-                        </div>
-                        <div class="form-group">
-                            <label for="platform.class">Class</label>
-                            <input type="text" name="platform.class" [(ngModel)]="metaObject.platform.class"
-                                [maxlength]="20" [disabled]="false" required />
-                        </div>
-                        <div *ngIf="metaObject.platform.name != null && metaObject.platform.name.length > 0" class="form-group">
-                            <label for="platform.type">Type</label>
-                            <select [(ngModel)]="metaObject.platform.type" name="platform.type" type="input" class=""
-                                [disabled]="metaObject.platform.name !== otherPlatformId" required>
-                                <option></option>
-                                <option>Fixed Wing</option>
-                                <option>Hybrid</option>
-                                <option>Multi-rotor</option>
-                                <option>Helicopter</option>
-                                <option>VTOL Fixed-wing</option>
-                                <option>Quadcopter</option>
-                            </select>
-                        </div>
-                        <div class="form-group">
-                            <label for="platform.serialNumber">Serial Number</label>
-                            <input type="text" name="platform.serialNumber"
-                                [(ngModel)]="metaObject.platform.serialNumber" [maxlength]="50"
-                                [required]="true" [disabled]="false" />
-                        </div>
-                        <div class="form-group">
-                            <label for="platform.faaIdNumber">FAA Id Number</label>
-                            <input type="text" name="platform.faaIdNumber" [(ngModel)]="metaObject.platform.faaIdNumber"
-                                [maxlength]="30" [required]="true" [disabled]="false" />
-                        </div>
+                        <h4>
+                            Name:
+                            <b> {{metaObject.uav.name}} </b>
+                        </h4>
+                        <h4>
+                            Type:
+                            <b> {{metaObject.uav.platformType}} </b>
+                        </h4>
+                        <h4>
+                            Serial Number:
+                            <b> {{metaObject.uav.serialNumber}} </b>
+                        </h4>
+                        <h4>
+                            FAA Id Number:
+                            <b> {{metaObject.uav.faaNumber}} </b>
+                        </h4>
                     </div>
                 </div>
 
@@ -88,83 +62,50 @@
                     <div class="panel-body">
                         <div class="form-group">
                             <label for="sensor.name">Name</label>
-                            <select [(ngModel)]="metaObject.sensor.name" name="sensor.name" type="input" (change)="handleSensorSelect()" required>                               
-                                <option></option>
-                                <option *ngFor="let sensor of sensors" [value]="sensor.oid">{{sensor.displayLabel}}</option>
-                            </select>
-                        </div>                    
-                        <div class="form-group" *ngIf="metaObject.sensor.name === otherSensorId">
-                            <label for="sensor.class">Other name</label>
-                            <input type="text" name="sensor.otherName" [(ngModel)]="metaObject.sensor.otherName"
-                                maxlength="20" required />
+                            {{metaObject.sensor.name}}
                         </div>
                         <div class="form-group">
                             <label for="sensor.type">Type</label>
-                            <input type="text" name="sensor.type" [(ngModel)]="metaObject.sensor.type" [maxlength]="20"
-                                [required]="true" [disabled]="metaObject.sensor.name !== otherSensorId" />
-                        </div>
-                        <div class="form-group">
-                            <label for="sensor.model">Model</label>
-                            <input type="text" name="sensor.model" [(ngModel)]="metaObject.sensor.model"
-                                [maxlength]="20" [required]="true" [disabled]="metaObject.sensor.name !== otherSensorId" />
+                            {{metaObject.sensor.sensorType}}
                         </div>
                         <div class="form-group">
                             <label for="sensor.wavelength">Wave Length</label>
-                            <div *ngFor="let wavelength of wavelengths">
-                              <boolean-field [value]="metaObject.sensor.wavelength && (-1 !== metaObject.sensor.wavelength.indexOf(wavelength))" [label]="wavelength" (valueChange)="updateSelectedWaveLength(wavelength, $event)" [disabled]="metaObject.sensor.name !== otherSensorId"></boolean-field>                              
-                            </div>                                                        
+                            <ul>
+                                <li *ngFor="let wavelength of metaObject.sensor.wavelengths">
+                                    {{wavelength.label}}
+                                </li>
+                            </ul>
                         </div>
-                        <!-- <div class="form-group">
-                            <label for="sensor.imageWidth">Image Width</label>
-                            <input type="text" name="sensor.imageWidth" [(ngModel)]="imageWidth"
-                                [required]="true" [disabled]="true" OnlyNumber="true" />
-                        </div>
-                        <div class="form-group">
-                            <label for="sensor.imageHeight">Image Height</label>
-                            <input type="text" name="sensor.imageHeight" [(ngModel)]="imageHeight"
-                                [required]="true" [disabled]="true" OnlyNumber="true" />
-                        </div> -->
                         <div class="form-group">
                             <label for="sensor.sensorWidth">Sensor Width</label>
-                            <input type="number" name="sensor.sensorWidth" [(ngModel)]="metaObject.sensor.sensorWidth"
-                                [required]="true" [disabled]="false" OnlyNumber="true" />
+                            {{metaObject.sensor.sensorWidth}}
                         </div>
                         <div class="form-group">
                             <label for="sensor.sensorWidth">Sensor Width Units</label>
-                            <select [(ngModel)]="metaObject.sensor.sensorWidthUnits" name="sensor.sensorWidthUnits" type="input" required disabled>
-                                <option value="mm" selected>Millimeters</option>
-                            </select>
+                            Millimeters
                         </div>
                         <div class="form-group">
                             <label for="sensor.sensorHeight">Sensor Height</label>
-                            <input type="number" name="sensor.sensorHeight" [(ngModel)]="metaObject.sensor.sensorHeight"
-                                [required]="true" [disabled]="false" OnlyNumber="true" />
+                            {{metaObject.sensor.sensorHeight}}
                         </div>
                         <div class="form-group">
                             <label for="sensor.sensorWidth">Sensor Height Units</label>
-                            <select [(ngModel)]="metaObject.sensor.sensorHeightUnits" name="sensor.sensorHeightUnits" type="input" required disabled>
-                                <option value="mm" selected>Millimeters</option>
-                            </select>                            
+                            Millimeters
                         </div>
                         <div class="form-group">
                             <label for="sensor.pixelSizeWidth">Pixel Size Width</label>
-                            <input type="number" name="sensor.pixelSizeWidth"
-                                [(ngModel)]="metaObject.sensor.pixelSizeWidth" [required]="true" [disabled]="false"
-                                OnlyNumber="true" />
+                            {{metaObject.sensor.pixelSizeWidth}}
                         </div>
                         <div class="form-group">
                             <label for="sensor.pixelSizeHeight">Pixel Size Height</label>
-                            <input type="number" name="sensor.pixelSizeHeight"
-                                [(ngModel)]="metaObject.sensor.pixelSizeHeight" [required]="true" [disabled]="false"
-                                OnlyNumber="true" />
+                            {{metaObject.sensor.pixelSizeHeight}}
                         </div>
                     </div>
                 </div>
 
                 <div class="button-holder">
                     <button type="button" class="btn btn-default" (click)="bsModalRef.hide()">Cancel</button>
-                    <button type="button" [disabled]="!ngForm.valid" class="btn btn-primary"
-                        (click)="handleSubmit()">
+                    <button type="button" [disabled]="!ngForm.valid" class="btn btn-primary" (click)="handleSubmit()">
                         <i class="icon-upload icon-white"></i> Submit
                     </button>
                 </div>
