--- a/uasdm-web/src/main/ng2/src/app/site/component/modal/upload-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/modal/upload-modal.component.html
@@ -80,42 +80,8 @@
               </button>
             </div>
           </div>
-          <ng-container *ngIf="hasField('uav')">
-            <div [@fadeInOnEnter] class="row">
-              <div class="col-md-8">
-                <label for="uav" style="margin-top: 10px;">UAV:</label>
-                <input class="form-control search-input" type="text" placeholder="Search..." [(ngModel)]="search"
-                  [typeaheadAsync]="true" [typeahead]="dataSource" (typeaheadOnSelect)="handleUavClick($event)"
-                  [typeaheadOptionsLimit]="10" typeaheadOptionField="serialNumber" [ngModelOptions]="{standalone: true}"
-                  (keydown.enter)="$event.preventDefault()" required />
-              </div>
-            </div>
 
-            <ng-container *ngIf="metadataOption != null">
-              <div [@fadeInOnEnter] class="row">
-                <div class="col-md-8">
-                  <label for="platform" style="margin-top: 10px;">Platform:</label>
-                  {{metadataOption.platform}}
-                </div>
-              </div>
-              <div [@fadeInOnEnter] class="row">
-                <div class="col-md-8">
-                  <label for="bureau" style="margin-top: 10px;">Bureau:</label>
-                  {{metadataOption.bureau}}
-                </div>
-              </div>              
-              <div [@fadeInOnEnter] class="row">
-                <div class="col-md-8">
-                  <label for="sensor" style="margin-top: 10px;">Sensor:</label>
-                  <div *ngFor="let sensor of metadataOption.sensors">
-                    <boolean-field [value]="page.selection.sensors && (-1 !== page.selection.sensors.indexOf(sensor.oid))"
-                      [label]="sensor.name" (valueChange)="updateSelectedSensor(sensor, $event)">
-                    </boolean-field>
-                  </div>                  
-                </div>
-              </div>
-            </ng-container>
-          </ng-container>
+          <metadata-page *ngIf="hasField('uav')" [(page)]="page"></metadata-page>
         </div>
       </div>
     </div>
