Initial report page

--- a/uasdm-web/src/main/ng2/src/app/shared/component/header/header.component.html
+++ b/uasdm-web/src/main/ng2/src/app/shared/component/header/header.component.html
@@ -32,6 +32,10 @@
             <li role="menuitem">
               <a class="dropdown-item" routerLink="/site/viewer" routerLinkActive="active">Site Viewer</a>
             </li>
+            <li role="menuitem">
+              <a class="dropdown-item" routerLink="/site/report" routerLinkActive="active">Report</a>
+            </li>
+
             <hr *ngIf="admin">
 
             <li *ngIf="admin" role="menuitem">
