Added collection date to collection and updated the upload modal to require the user to provide that value
Added hooks and logic for calculating the size of an s3 bucket

--- a/uasdm-web/src/main/ng2/src/app/site/component/report/reports.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/report/reports.component.html
@@ -23,6 +23,11 @@
 
 						<input *ngSwitchCase="'TEXT'" pInputText type="text"
 							(input)="dt.filter($event.target.value, col.field, 'contains')">
+						<input *ngSwitchCase="'NUMBER'" pInputText type="number"
+							(input)="dt.filter($event.target.value, col.field, 'equals')">
+						<p-dropdown *ngSwitchCase="'BOOLEAN'" [options]="booleanOptions"
+							(onChange)="dt.filter($event.value.value, col.field, 'equals')"
+							optionLabel="label" optionValue="value" [virtualScroll]="true"></p-dropdown>
 					</th>
 				</tr>
 			</ng-template>
