--- a/uasdm-web/src/main/ng2/src/app/site/component/modal/upload-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/modal/upload-modal.component.html
@@ -80,6 +80,12 @@
               </button>
             </div>
           </div>
+          <div [@fadeInOnEnter] class="row" *ngIf="hasField('collectionDate')">
+            <div class="col-md-8">
+              <label for="platform" style="margin-top: 10px;">Collection Date:</label>
+              <input [(ngModel)]="page.selection.collectionDate" name="collectionDate" type="date" class="form-control" required />
+            </div>
+          </div>
 
           <metadata-page *ngIf="hasField('uav')" [(page)]="page"></metadata-page>
         </div>
