--- a/uasdm-web/src/main/ng2/src/app/site/component/sensor/sensors.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/sensor/sensors.component.html
@@ -5,38 +5,6 @@
 
 		<h2>Sensors</h2>
 
-		<pagination-controls *ngIf="res.resultSet.length > res.pageSize" (pageChange)="onPageChange($event)"></pagination-controls>
-		
-		<div class="list-table-wrapper">
-			<table id="manage-sensors-table"
-				class="list-table table table-bordered table-striped">
-				<thead>
-					<tr>
-						<th></th>
-						<th class="label-column">Name</th>
-						<th class="label-column">Description</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr *ngFor="let sensor of res.resultSet | paginate: { itemsPerPage: res.pageSize, currentPage: res.pageNumber, totalItems: res.count }"
-						class="fade-ngRepeat-item">
-						<td class="button-column">
-							<a class="fa fa-eye ico-edit" (click)="view(sensor)" title="View sensor"></a>
-							<a class="fa fa-trash-alt ico-remove" (click)="onClickRemove(sensor)" title="Remove sensor"></a>
-					    </td>
-						<td class="label-column">{{ sensor.name }}</td>
-						<td class="label-column">{{ sensor.description }}</td>
-					</tr>
-					<tr>
-						<td class="button-column">
-						  <a class="fa fa-plus" (click)="newInstance()" title="Add new sensor"></a>
-						</td>
-					</tr>
-
-				</tbody>
-			</table>
-		</div>
-		
-		<pagination-controls *ngIf="res.resultSet.length > res.pageSize" (pageChange)="onPageChange($event)"></pagination-controls>
+		<generic-table *ngIf="config != null" [cols]="cols" [config]="config" [refresh]="refresh" (click)="onClick($event)"></generic-table>		
 	</div>
 </div>
