--- a/uasdm-web/src/main/ng2/src/app/shared/component/generic-table/generic-table.component.html
+++ b/uasdm-web/src/main/ng2/src/app/shared/component/generic-table/generic-table.component.html
@@ -41,6 +41,8 @@
 					<ng-container *ngSwitchCase="'ACTIONS'">
 						<a *ngIf="config.view" class="fa fa-eye ico-edit" (click)="onClick('view', rowData, col)"
 							[title]="'View ' + config.label"></a>
+						<a *ngIf="config.edit" class="fa fa-pencil-alt ico-edit" (click)="onClick('edit', rowData, col)"
+							[title]="'Edit ' + config.label"></a>
 						<a *ngIf="config.remove" class="fa fa-trash-alt ico-remove"
 							(click)="onClick('edit', rowData, col)" [title]="'Remove ' + config.label"></a>
 					</ng-container>
