Fixed bug with deleting a document
Added support on the report page to not link to a product or collection
if they don't exist

Fixed bug where the Collection imageWidth and imageHieght were never
being set

Added support for the metadata automatically being updated when the
image width and height are being calculated

--- a/uasdm-web/src/main/ng2/src/app/shared/component/generic-table/generic-table.component.html
+++ b/uasdm-web/src/main/ng2/src/app/shared/component/generic-table/generic-table.component.html
@@ -32,7 +32,7 @@
 
 		<ng-template pTemplate="body" let-rowData let-columns="columns">
 			<tr>
-				<td *ngFor="let col of columns" [ngSwitch]="col.type" style="width:250px">
+				<td *ngFor="let col of columns" [ngSwitch]="getColumnType(rowData, col)" style="width:250px">
 					<ng-container *ngSwitchCase="'URL'">
 						<a [routerLink]="['/' + col.baseUrl + '/' + rowData[col.urlField]]">
 							{{rowData[col.field]}}
@@ -48,8 +48,10 @@
 					</ng-container>
 					<ng-container *ngSwitchCase="'CONSTANT'">
 						<a *ngIf="rowData[col.field] != null" (click)="onClick('custom', rowData, col)">
-							{{col.text}} 
+							{{col.text}}
 						</a>
+					</ng-container>
+					<ng-container *ngSwitchCase="'NONE'">
 					</ng-container>
 					<ng-container *ngSwitchDefault>
 						{{rowData[col.field]}}
