--- a/uasdm-web/src/main/ng2/src/app/site/component/metadata-page/metadata-page.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/metadata-page/metadata-page.component.html
@@ -91,7 +91,7 @@
                             <label for="sensor.wavelength">Wave Length</label>
                             <ul>
                                 <li *ngFor="let wavelength of metaObject.sensor.wavelengths">
-                                    {{wavelength.label}}
+                                    {{wavelength.name}}
                                 </li>
                             </ul>
                         </div>
