--- a/uasdm-web/src/main/ng2/src/app/admin/component/email/email.component.html
+++ b/uasdm-web/src/main/ng2/src/app/admin/component/email/email.component.html
@@ -1,5 +1,5 @@
 <div>
-  <uasdm-header></uasdm-header>
+<!--   <uasdm-header></uasdm-header> -->
 
   <div class="col-lg-2"></div>
   <div class="col-lg-8">
