--- a/uasdm-web/src/main/ng2/src/app/site/component/report/reports.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/report/reports.component.html
@@ -1,7 +1,7 @@
 <div>
 	<uasdm-header></uasdm-header>
 
-	<div id="app-container" class="container">
+	<div id="app-container" class="container-fluid">
 
 		<h2>Report</h2>
 
