--- a/uasdm-web/src/main/ng2/src/app/site/component/sensor/sensors.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/sensor/sensors.component.html
@@ -1,10 +1,10 @@
 <div>
-    <uasdm-header></uasdm-header>
+<!--     <uasdm-header></uasdm-header> -->
 
-    <div id="app-container" class="container">
+<!--     <div id="app-container" class="container"> -->
 
 		<h2>Sensors</h2>
 
 		<generic-table *ngIf="config != null" [cols]="cols" [config]="config" [refresh]="refresh" (click)="onClick($event)"></generic-table>		
-	</div>
+<!-- 	</div> -->
 </div>
