--- a/uasdm-web/src/main/ng2/src/app/shared/component/generic-table/generic-table.component.html
+++ b/uasdm-web/src/main/ng2/src/app/shared/component/generic-table/generic-table.component.html
@@ -1,14 +1,20 @@
 <div>
 
-	<p-table #dt [columns]="cols" [value]="page.resultSet" [autoLayout]="true" [scrollable]="true"
-		styleClass="ui-table-customers" [lazy]="true" (onLazyLoad)="onPageChange($event)" [paginator]="true"
+	<p-table #dt [columns]="cols" [value]="page.resultSet" [autoLayout]="true" [scrollable]="true" [resizableColumns]="true"
+		styleClass="p-datatable-gridlines" [lazy]="true" (onLazyLoad)="onPageChange($event)" [paginator]="true"
 		[totalRecords]="page.count" [rows]="page.pageSize" [loading]="loading">
+    
+        <ng-template pTemplate="colgroup" let-columns>
+            <colgroup>
+                <col *ngFor="let col of columns">
+            </colgroup>
+        </ng-template>
 
 		<ng-template pTemplate="header" let-columns>
 			<tr>
-				<th *ngFor="let col of columns" [pSortableColumn]="col.field" style="width:250px">
+				<th *ngFor="let col of columns" [pSortableColumn]="col.field" style="width:250px" pResizableColumn>
 					{{col.header}}
-					<p-sortIcon *ngIf="col.sortable" [field]="col.field" ariaLabel="Activate to sort"
+					<p-sortIcon *ngIf="col.sortable" [field]="col.field" ariaLabel="Activate to sort" style="float:right;"
 						ariaLabelDesc="Activate to sort in descending order"
 						ariaLabelAsc="Activate to sort in ascending order"></p-sortIcon>
 				</th>
@@ -16,13 +22,13 @@
 			<tr>
 				<th *ngFor="let col of columns" [ngSwitch]="col.type" style="width:250px">
 					<ng-container *ngIf="col.filter !== false">
-						<input *ngSwitchCase="'URL'" pInputText type="text"
+						<input *ngSwitchCase="'URL'" pInputText type="text" placeholder="Filter by URL..."
 							(input)="dt.filter($event.target.value, col.field, 'contains')">
-						<input *ngSwitchCase="'TEXT'" pInputText type="text"
+						<input *ngSwitchCase="'TEXT'" pInputText type="text" placeholder="Filter by text..."
 							(input)="dt.filter($event.target.value, col.field, 'contains')">
-						<input *ngSwitchCase="'NUMBER'" pInputText type="number"
+						<input *ngSwitchCase="'NUMBER'" pInputText type="number" placeholder="Filter by number..."
 							(input)="dt.filter($event.target.value, col.field, 'equals')">
-						<p-dropdown *ngSwitchCase="'BOOLEAN'" [options]="booleanOptions"
+						<p-dropdown *ngSwitchCase="'BOOLEAN'" [options]="booleanOptions" placeholder="Filter by category..."
 							(onChange)="dt.filter($event.value.value, col.field, 'equals')" optionLabel="label"
 							optionValue="value" [virtualScroll]="true"></p-dropdown>
 					</ng-container>
@@ -32,7 +38,7 @@
 
 		<ng-template pTemplate="body" let-rowData let-columns="columns">
 			<tr>
-				<td *ngFor="let col of columns" [ngSwitch]="getColumnType(rowData, col)" style="width:250px">
+				<td *ngFor="let col of columns" [ngSwitch]="getColumnType(rowData, col)" class="ui-resizable-column" style="width:250px">
 					<ng-container *ngSwitchCase="'URL'">
 						<a [routerLink]="['/' + col.baseUrl + '/' + rowData[col.urlField]]">
 							{{rowData[col.field]}}
@@ -59,11 +65,15 @@
 				</td>
 			</tr>
 		</ng-template>
-		<ng-template pTemplate="paginatorleft">
-			<p-button *ngIf="config.create" type="button" icon="pi pi-plus" [style]="{'border':'solid 1px'}"
-				styleClass="p-button-text" [label]="'Add new ' + config.label" (click)="onClick('create', null, null)">
-			</p-button>
-		</ng-template>
+<!-- 		<ng-template pTemplate="paginatorleft"> -->
+<!-- 			<p-button *ngIf="config.create" type="button" icon="pi pi-plus" [style]="{'border':'solid 1px'}" -->
+<!-- 				styleClass="p-button-text" [label]="'Add new ' + config.label" (click)="onClick('create', null, null)"> -->
+<!-- 			</p-button> -->
+<!-- 		</ng-template> -->
 	</p-table>
+  
+    <div style="width:100%;text-align:right;">
+        <button *ngIf="config.create" (click)="onClick('create', null, null)" style="margin: 10px 0 0;" class="btn btn-primary">Add new {{config.label}}</button>
+    </div>
 
 </div>
