--- a/uasdm-web/src/main/ng2/src/app/shared/component/generic-table/generic-table.css
+++ b/uasdm-web/src/main/ng2/src/app/shared/component/generic-table/generic-table.css
@@ -2,3 +2,16 @@
     background: #6BA542 !important; /* IE fallback */
     background: var(--theme-submit-button-color) !important;
 }
+
+:host ::ng-deep .ui-dropdown {
+    width: 100%;
+}
+
+/* :host ::ng-deep body .ui-dropdown-panel .ui-dropdown-items .ui-dropdown-item.ui-state-highlight,  */
+/* :host ::ng-deep body .ui-dropdown-panel .ui-dropdown-items .ui-dropdown-item-group.ui-state-highlight { */
+/*     background-color: #007276; */
+/* } */
+
+:host ::ng-deep body .ui-paginator .ui-paginator-pages .ui-paginator-page.ui-state-active {
+  background-color: red;
+}
